Fix spacing

--- a/profiles/ug/themes/ug/ug_theme/css/base.css
+++ b/profiles/ug/themes/ug/ug_theme/css/base.css
@@ -566,8 +566,7 @@ Base Styles
       color: #333333;
   }
 
-p
-  {
+  p {
     word-wrap: break-word;
     color:#2C2C2C;
   }
